# duly

./: .gitignore  Makefile  TODO.md  dune-project  dune-workspace  spice.toml
boot/: dune  dune-project  spice_boot.ml  spice_boot.opam
scripts/: generate_dune_bootstrap_project  spice
src/: dune  main.ml
