(lang dune 3.0)

(generate_opam_files true)

(homepage "https://github.com/gridbugs/spice")
(license MIT)
(authors "Stephen Sherratt <stephen@sherra.tt>")
(maintainers "https://github.com/gridbugs/spice/issues")
(bug_reports "https://github.com/gridbugs/spice/issues")

(package
 (name spice_boot)
 (synopsis "Minimal package for bootstrapping spice build system from dune")
 (depends
  (stdune (= 3.10.0))
  (toml (= 7.1.0))
  (fileutils (= 0.6.4))))
